fixed posts positions and alignments

--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    padding: 0;
     background-color: azure;
     overflow-x: hidden;
     z-index: 1;
@@ -61,21 +62,24 @@ body {
 
 .content {
     margin: 0;
-    top: 0;
     width: 80vw;
     margin-left: 20vw;
     height: 100vh;
     overflow-y: auto;
-    background: transparent;
-    justify-content: center;
-    border: 1px solid black;
-    padding: 40px 20px;
     display: flex;
     flex-direction: column;
+    gap: 10px;
+    background: transparent;
+    border: 1px solid black;
+    padding-top: 75px;
 }
 
 .post-1 {
+    gap: 20px;
+    border-bottom: 1px solid black;
     font-family: Calibri;
     margin: 0 auto;
+    padding: 15px;
     font-size: 20px;
+    width: 60%;
 }
